chore: update scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(UnivOpenCVCourse)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
@@ -10,7 +11,9 @@ find_package(OpenCV REQUIRED)
 
 add_executable(
     main
-    ${SOURCE_DIR}/main.cpp
+    ${SOURCE_DIR}/p7.main.cpp
+    ${SOURCE_DIR}/filter.cpp
+    ${SOURCE_DIR}/filter.hpp
 )
 
 target_include_directories(main PRIVATE ${SOURCE_DIR})
